fixed issues with the action component clipping and text line-height issues in multiple components

--- a/src/sass/05-components/_action.scss
+++ b/src/sass/05-components/_action.scss
@@ -49,7 +49,7 @@
         }
 
         &__content {
-            bottom: -80px;
+            bottom: -82px;
             left: 0;
             position: absolute;
             padding: 30px;
